--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Redux Shell</title>
+    <title>A Demo Redux/React App</title>
 </head>
 <body>
-    <h1>Redux Shell</h1>
+    <h1>A Knight's Tale Redux App</h1>
     <div id="root"></div>
     <script src="build/bundle.js"></script>
 </body>
